# python_nano_bench

./: .gitignore  .gitmodules  README.md  build.sh  pyproject.toml  python-shell.nix  setup.py  shell.nix
.github/workflows/: publish.yml  pylint.yml  python-app.yml
python_nano_bench/: __init__.py  asm.py  nano_bench.py
python_nano_bench/elevate/: __init__.py  posix.py  posix_loop.py
python_nano_bench/python_nano_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python_nano_bench/: __init__.py  asm.py  constraints.py  exegesis.py  nano_bench.py
src/python_nano_bench/test/: constrains.py  python_nano_bench.py
src/python_nano_bench/test/assembly_files/: kyber.asm
src/python_nano_bench/test/exegesis/: alderlake.latency.error  alderlake.throughput.error  alderlake.uops.error  mem  simple
test/: asm.py  python_nano_bench.py
