[project]
name = "python_nano_bench"
version = "0.1.0"
description = "Control all Build Systems"
readme = "README.md"
requires-python = ">=3.8"
# license = { text = "MIT" }

authors = [
  { name = "FloydZ", email = "floyd.zweydinger+github@rub.de" }
]

dependencies = [
    pytest 
    pylint
    Opcodes
]

[tool.setuptools.packages.find]
where = ["python_nano_bench"]

[project.urls]
"Homepage" = "https://github.com/FloydZ/python_nano_bench"
"Repository" = "https://github.com/FloydZ/python_nano_bench"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
